tests/snapshots/static_solvers__generator__golden_test_case_0.snap
---
source: tests/static_solvers.rs
expression: "board_snapshot(\"fungster\", seed, &board)"
---
generator=fungster
seed=17
width=17
height=10
total=650
cells=
4 1 2 3 7 3 2 4 2 2 4 5 1 8 2 8 2
3 3 4 4 6 3 2 3 2 1 6 3 7 3 5 2 3
5 5 4 4 2 4 6 3 2 5 2 4 4 4 6 5 5
3 2 1 4 4 4 2 2 3 3 2 3 4 3 2 3 5
4 6 5 5 5 3 2 7 3 3 3 4 4 3 3 7 3
4 4 6 4 6 4 3 4 6 4 6 6 3 4 3 5 7
3 3 4 4 4 2 3 3 4 2 4 1 4 3 3 5 3
3 3 4 2 1 4 4 3 2 4 4 3 3 3 4 3 4
3 6 3 4 4 6 5 5 4 6 2 8 5 7 5 5 4
7 4 3 6 5 4 5 5 4 4 4 2 5 3 5 2 2
