tests/snapshots/static_solvers__generator__golden_test_case_1.snap
---
source: tests/static_solvers.rs
expression: "board_snapshot(\"fungster\", seed, &board)"
---
generator=fungster
seed=23
width=17
height=10
total=610
cells=
2 3 5 7 1 2 1 2 3 4 2 4 4 3 1 4 2
1 2 5 2 4 3 2 1 3 3 1 3 2 4 4 7 3
2 3 5 5 5 1 1 3 5 2 4 2 2 5 5 4 6
4 4 2 1 1 5 3 2 3 1 4 1 1 6 2 4 6
2 8 5 5 3 1 3 3 3 4 1 2 1 9 5 3 2
5 5 3 5 3 4 6 3 2 3 3 3 5 4 4 5 4
5 2 7 4 4 6 4 3 5 3 3 4 5 6 4 5 6
4 3 5 1 3 2 1 4 3 4 4 3 2 3 2 2 3
3 6 3 5 4 4 5 2 5 6 4 4 5 3 3 6 3
3 4 2 5 6 4 4 8 5 4 6 6 3 4 7 2 4
