tests/snapshots/static_solvers__generator__golden_test_case_2.snap
---
source: tests/static_solvers.rs
expression: "board_snapshot(\"random\", seed, &board)"
---
generator=random
seed=17
width=17
height=10
total=840
cells=
6 2 5 2 9 9 7 1 5 3 7 1 2 8 9 1 1
6 6 3 5 5 2 1 2 1 9 1 8 2 7 6 3 8
4 7 4 1 5 8 6 1 7 6 9 1 8 2 2 9 7
4 4 6 4 7 5 3 6 2 3 7 9 4 7 2 7 4
9 4 7 3 2 8 7 3 5 4 8 6 7 2 3 3 5
3 2 2 1 8 1 8 9 8 1 3 4 8 4 4 5 4
3 5 4 8 8 1 3 6 1 9 3 3 1 1 5 3 4
7 6 8 3 4 3 7 7 6 4 1 7 7 8 1 7 4
1 7 9 9 6 1 9 6 2 9 5 7 8 6 3 9 6
7 7 9 1 5 3 3 6 7 1 2 7 7 4 8 9 8
