tests/snapshots/static_solvers__generator__golden_test_case_3.snap
---
source: tests/static_solvers.rs
expression: "board_snapshot(\"random\", seed, &board)"
---
generator=random
seed=23
width=17
height=10
total=900
cells=
5 7 7 5 9 1 8 9 7 8 4 9 3 7 5 1 2
9 7 6 4 6 1 9 2 8 8 8 4 5 7 2 1 7
8 4 6 6 7 8 3 9 9 2 8 5 8 8 4 6 8
6 8 8 5 8 1 1 7 3 9 4 7 6 6 6 8 3
4 3 9 7 5 1 3 8 6 5 5 5 2 7 5 7 3
7 3 4 2 1 8 3 1 5 8 4 3 1 6 9 8 4
7 8 2 1 2 6 6 1 1 7 7 2 8 9 3 7 4
6 4 9 1 5 5 8 6 4 7 5 1 9 3 6 9 7
9 5 8 7 7 1 8 2 1 4 2 9 8 6 5 6 2
2 8 2 4 2 1 1 8 8 9 2 6 6 1 1 6 9
