tests/snapshots/static_solvers__generator__golden_test_case_4.snap
---
source: tests/static_solvers.rs
expression: "rejection_snapshot(seed, result)"
---
generator=rejection
seed=13
result=exhausted
attempts=2
