tests/snapshots/static_solvers__generator__golden_test_case_5.snap
---
source: tests/static_solvers.rs
expression: "rejection_snapshot(seed, result)"
---
generator=rejection
seed=23
result=exhausted
attempts=2
